Tools/peg_generator/pegen/pcpp/pcpp/parsetabs/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> args
Rule 1     args -> CPP_LPAREN args CPP_RPAREN
Rule 2     args -> <empty>
Rule 3     args -> arg
Rule 4     args -> arg CPP_COMMA args
Rule 5     arg -> <empty>
Rule 6     arg -> primary
Rule 7     arg -> primary arg
Rule 8     group -> CPP_LPAREN groupcontents CPP_RPAREN
Rule 9     groupcontents -> <empty>
Rule 10    groupcontents -> groupitem
Rule 11    groupcontents -> groupitem groupcontents
Rule 12    groupitem -> primary
Rule 13    groupitem -> CPP_COMMA
Rule 14    primary -> group
Rule 15    primary -> OTHER

Terminals, with rules where they appear

CPP_COMMA            : 4 13
CPP_LPAREN           : 1 8
CPP_RPAREN           : 1 8
OTHER                : 15
error                : 

Nonterminals, with rules where they appear

arg                  : 3 4 7
args                 : 1 4 0
group                : 14
groupcontents        : 8 11
groupitem            : 10 11
primary              : 6 7 12

Parsing method: LALR

state 0

    (0) S' -> . args
    (1) args -> . CPP_LPAREN args CPP_RPAREN
    (2) args -> .
    (3) args -> . arg
    (4) args -> . arg CPP_COMMA args
    (5) arg -> .
    (6) arg -> . primary
    (7) arg -> . primary arg
    (14) primary -> . group
    (15) primary -> . OTHER
    (8) group -> . CPP_LPAREN groupcontents CPP_RPAREN

  ! reduce/reduce conflict for $end resolved using rule 2 (args -> .)
    CPP_LPAREN      shift and go to state 2
    $end            reduce using rule 2 (args -> .)
    CPP_COMMA       reduce using rule 5 (arg -> .)
    OTHER           shift and go to state 6

  ! $end            [ reduce using rule 5 (arg -> .) ]

    args                           shift and go to state 1
    arg                            shift and go to state 3
    primary                        shift and go to state 4
    group                          shift and go to state 5

state 1

    (0) S' -> args .



state 2

    (1) args -> CPP_LPAREN . args CPP_RPAREN
    (8) group -> CPP_LPAREN . groupcontents CPP_RPAREN
    (1) args -> . CPP_LPAREN args CPP_RPAREN
    (2) args -> .
    (3) args -> . arg
    (4) args -> . arg CPP_COMMA args
    (9) groupcontents -> .
    (10) groupcontents -> . groupitem
    (11) groupcontents -> . groupitem groupcontents
    (5) arg -> .
    (6) arg -> . primary
    (7) arg -> . primary arg
    (12) groupitem -> . primary
    (13) groupitem -> . CPP_COMMA
    (14) primary -> . group
    (15) primary -> . OTHER
    (8) group -> . CPP_LPAREN groupcontents CPP_RPAREN

  ! reduce/reduce conflict for CPP_RPAREN resolved using rule 2 (args -> .)
  ! reduce/reduce conflict for CPP_RPAREN resolved using rule 2 (args -> .)
  ! shift/reduce conflict for CPP_COMMA resolved as shift
    CPP_LPAREN      shift and go to state 2
    CPP_RPAREN      reduce using rule 2 (args -> .)
    CPP_COMMA       shift and go to state 9
    OTHER           shift and go to state 6

  ! CPP_RPAREN      [ reduce using rule 9 (groupcontents -> .) ]
  ! CPP_COMMA       [ reduce using rule 5 (arg -> .) ]
  ! CPP_RPAREN      [ reduce using rule 5 (arg -> .) ]

    args                           shift and go to state 7
    groupcontents                  shift and go to state 8
    arg                            shift and go to state 3
    groupitem                      shift and go to state 10
    primary                        shift and go to state 11
    group                          shift and go to state 5

state 3

    (3) args -> arg .
    (4) args -> arg . CPP_COMMA args

    $end            reduce using rule 3 (args -> arg .)
    CPP_RPAREN      reduce using rule 3 (args -> arg .)
    CPP_COMMA       shift and go to state 12


state 4

    (6) arg -> primary .
    (7) arg -> primary . arg
    (5) arg -> .
    (6) arg -> . primary
    (7) arg -> . primary arg
    (14) primary -> . group
    (15) primary -> . OTHER
    (8) group -> . CPP_LPAREN groupcontents CPP_RPAREN

  ! reduce/reduce conflict for CPP_COMMA resolved using rule 5 (arg -> .)
  ! reduce/reduce conflict for $end resolved using rule 5 (arg -> .)
  ! reduce/reduce conflict for CPP_RPAREN resolved using rule 5 (arg -> .)
    CPP_COMMA       reduce using rule 5 (arg -> .)
    $end            reduce using rule 5 (arg -> .)
    CPP_RPAREN      reduce using rule 5 (arg -> .)
    OTHER           shift and go to state 6
    CPP_LPAREN      shift and go to state 14

  ! CPP_COMMA       [ reduce using rule 6 (arg -> primary .) ]
  ! $end            [ reduce using rule 6 (arg -> primary .) ]
  ! CPP_RPAREN      [ reduce using rule 6 (arg -> primary .) ]

    primary                        shift and go to state 4
    arg                            shift and go to state 13
    group                          shift and go to state 5

state 5

    (14) primary -> group .

    OTHER           reduce using rule 14 (primary -> group .)
    CPP_LPAREN      reduce using rule 14 (primary -> group .)
    CPP_COMMA       reduce using rule 14 (primary -> group .)
    $end            reduce using rule 14 (primary -> group .)
    CPP_RPAREN      reduce using rule 14 (primary -> group .)


state 6

    (15) primary -> OTHER .

    OTHER           reduce using rule 15 (primary -> OTHER .)
    CPP_LPAREN      reduce using rule 15 (primary -> OTHER .)
    CPP_COMMA       reduce using rule 15 (primary -> OTHER .)
    $end            reduce using rule 15 (primary -> OTHER .)
    CPP_RPAREN      reduce using rule 15 (primary -> OTHER .)


state 7

    (1) args -> CPP_LPAREN args . CPP_RPAREN

    CPP_RPAREN      shift and go to state 15


state 8

    (8) group -> CPP_LPAREN groupcontents . CPP_RPAREN

    CPP_RPAREN      shift and go to state 16


state 9

    (13) groupitem -> CPP_COMMA .

    CPP_COMMA       reduce using rule 13 (groupitem -> CPP_COMMA .)
    OTHER           reduce using rule 13 (groupitem -> CPP_COMMA .)
    CPP_LPAREN      reduce using rule 13 (groupitem -> CPP_COMMA .)
    CPP_RPAREN      reduce using rule 13 (groupitem -> CPP_COMMA .)


state 10

    (10) groupcontents -> groupitem .
    (11) groupcontents -> groupitem . groupcontents
    (9) groupcontents -> .
    (10) groupcontents -> . groupitem
    (11) groupcontents -> . groupitem groupcontents
    (12) groupitem -> . primary
    (13) groupitem -> . CPP_COMMA
    (14) primary -> . group
    (15) primary -> . OTHER
    (8) group -> . CPP_LPAREN groupcontents CPP_RPAREN

  ! reduce/reduce conflict for CPP_RPAREN resolved using rule 9 (groupcontents -> .)
    CPP_RPAREN      reduce using rule 9 (groupcontents -> .)
    CPP_COMMA       shift and go to state 9
    OTHER           shift and go to state 6
    CPP_LPAREN      shift and go to state 14

  ! CPP_RPAREN      [ reduce using rule 10 (groupcontents -> groupitem .) ]

    groupitem                      shift and go to state 10
    groupcontents                  shift and go to state 17
    primary                        shift and go to state 18
    group                          shift and go to state 5

state 11

    (6) arg -> primary .
    (7) arg -> primary . arg
    (12) groupitem -> primary .
    (5) arg -> .
    (6) arg -> . primary
    (7) arg -> . primary arg
    (14) primary -> . group
    (15) primary -> . OTHER
    (8) group -> . CPP_LPAREN groupcontents CPP_RPAREN

  ! reduce/reduce conflict for CPP_COMMA resolved using rule 6 (arg -> primary .)
  ! reduce/reduce conflict for CPP_RPAREN resolved using rule 6 (arg -> primary .)
  ! reduce/reduce conflict for CPP_COMMA resolved using rule 5 (arg -> .)
  ! reduce/reduce conflict for CPP_RPAREN resolved using rule 5 (arg -> .)
  ! shift/reduce conflict for OTHER resolved as shift
  ! shift/reduce conflict for CPP_LPAREN resolved as shift
    CPP_COMMA       reduce using rule 5 (arg -> .)
    CPP_RPAREN      reduce using rule 5 (arg -> .)
    OTHER           shift and go to state 6
    CPP_LPAREN      shift and go to state 14

  ! CPP_COMMA       [ reduce using rule 6 (arg -> primary .) ]
  ! CPP_RPAREN      [ reduce using rule 6 (arg -> primary .) ]
  ! CPP_COMMA       [ reduce using rule 12 (groupitem -> primary .) ]
  ! OTHER           [ reduce using rule 12 (groupitem -> primary .) ]
  ! CPP_LPAREN      [ reduce using rule 12 (groupitem -> primary .) ]
  ! CPP_RPAREN      [ reduce using rule 12 (groupitem -> primary .) ]

    primary                        shift and go to state 4
    arg                            shift and go to state 13
    group                          shift and go to state 5

state 12

    (4) args -> arg CPP_COMMA . args
    (1) args -> . CPP_LPAREN args CPP_RPAREN
    (2) args -> .
    (3) args -> . arg
    (4) args -> . arg CPP_COMMA args
    (5) arg -> .
    (6) arg -> . primary
    (7) arg -> . primary arg
    (14) primary -> . group
    (15) primary -> . OTHER
    (8) group -> . CPP_LPAREN groupcontents CPP_RPAREN

  ! reduce/reduce conflict for $end resolved using rule 2 (args -> .)
  ! reduce/reduce conflict for CPP_RPAREN resolved using rule 2 (args -> .)
    CPP_LPAREN      shift and go to state 2
    $end            reduce using rule 2 (args -> .)
    CPP_RPAREN      reduce using rule 2 (args -> .)
    CPP_COMMA       reduce using rule 5 (arg -> .)
    OTHER           shift and go to state 6

  ! $end            [ reduce using rule 5 (arg -> .) ]
  ! CPP_RPAREN      [ reduce using rule 5 (arg -> .) ]

    arg                            shift and go to state 3
    args                           shift and go to state 19
    primary                        shift and go to state 4
    group                          shift and go to state 5

state 13

    (7) arg -> primary arg .

    CPP_COMMA       reduce using rule 7 (arg -> primary arg .)
    $end            reduce using rule 7 (arg -> primary arg .)
    CPP_RPAREN      reduce using rule 7 (arg -> primary arg .)


state 14

    (8) group -> CPP_LPAREN . groupcontents CPP_RPAREN
    (9) groupcontents -> .
    (10) groupcontents -> . groupitem
    (11) groupcontents -> . groupitem groupcontents
    (12) groupitem -> . primary
    (13) groupitem -> . CPP_COMMA
    (14) primary -> . group
    (15) primary -> . OTHER
    (8) group -> . CPP_LPAREN groupcontents CPP_RPAREN

    CPP_RPAREN      reduce using rule 9 (groupcontents -> .)
    CPP_COMMA       shift and go to state 9
    OTHER           shift and go to state 6
    CPP_LPAREN      shift and go to state 14

    groupcontents                  shift and go to state 8
    groupitem                      shift and go to state 10
    primary                        shift and go to state 18
    group                          shift and go to state 5

state 15

    (1) args -> CPP_LPAREN args CPP_RPAREN .

    $end            reduce using rule 1 (args -> CPP_LPAREN args CPP_RPAREN .)
    CPP_RPAREN      reduce using rule 1 (args -> CPP_LPAREN args CPP_RPAREN .)


state 16

    (8) group -> CPP_LPAREN groupcontents CPP_RPAREN .

    OTHER           reduce using rule 8 (group -> CPP_LPAREN groupcontents CPP_RPAREN .)
    CPP_LPAREN      reduce using rule 8 (group -> CPP_LPAREN groupcontents CPP_RPAREN .)
    CPP_COMMA       reduce using rule 8 (group -> CPP_LPAREN groupcontents CPP_RPAREN .)
    $end            reduce using rule 8 (group -> CPP_LPAREN groupcontents CPP_RPAREN .)
    CPP_RPAREN      reduce using rule 8 (group -> CPP_LPAREN groupcontents CPP_RPAREN .)


state 17

    (11) groupcontents -> groupitem groupcontents .

    CPP_RPAREN      reduce using rule 11 (groupcontents -> groupitem groupcontents .)


state 18

    (12) groupitem -> primary .

    CPP_COMMA       reduce using rule 12 (groupitem -> primary .)
    OTHER           reduce using rule 12 (groupitem -> primary .)
    CPP_LPAREN      reduce using rule 12 (groupitem -> primary .)
    CPP_RPAREN      reduce using rule 12 (groupitem -> primary .)


state 19

    (4) args -> arg CPP_COMMA args .

    $end            reduce using rule 4 (args -> arg CPP_COMMA args .)
    CPP_RPAREN      reduce using rule 4 (args -> arg CPP_COMMA args .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for CPP_COMMA in state 2 resolved as shift
WARNING: shift/reduce conflict for OTHER in state 11 resolved as shift
WARNING: shift/reduce conflict for CPP_LPAREN in state 11 resolved as shift
WARNING: reduce/reduce conflict in state 0 resolved using rule (args -> <empty>)
WARNING: rejected rule (arg -> <empty>) in state 0
WARNING: reduce/reduce conflict in state 2 resolved using rule (args -> <empty>)
WARNING: rejected rule (groupcontents -> <empty>) in state 2
WARNING: reduce/reduce conflict in state 2 resolved using rule (args -> <empty>)
WARNING: rejected rule (arg -> <empty>) in state 2
WARNING: reduce/reduce conflict in state 4 resolved using rule (arg -> <empty>)
WARNING: rejected rule (arg -> primary) in state 4
WARNING: reduce/reduce conflict in state 10 resolved using rule (groupcontents -> <empty>)
WARNING: rejected rule (groupcontents -> groupitem) in state 10
WARNING: reduce/reduce conflict in state 11 resolved using rule (arg -> primary)
WARNING: rejected rule (groupitem -> primary) in state 11
WARNING: reduce/reduce conflict in state 11 resolved using rule (arg -> <empty>)
WARNING: rejected rule (arg -> primary) in state 11
WARNING: reduce/reduce conflict in state 12 resolved using rule (args -> <empty>)
WARNING: rejected rule (arg -> <empty>) in state 12
WARNING: Rule (arg -> primary) is never reduced
WARNING: Rule (groupcontents -> groupitem) is never reduced
